scripts/nullaway/wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/AssertTest.java:64: error: [NullAway] passing @Nullable parameter 'chain' where @NonNull is required
        Assert.assertNull("Chain is not null", chain);
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:40: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerExpressionsTestcase = null;
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerExpressionsTestsuite = null;
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerTags = null;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:16: error: [NullAway] dereferenced expression getContext() is @Nullable
                getContext().put("k", 2);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("k")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("h")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [NullAway] dereferenced expression suite.getContext() is @Nullable
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:32: error: [NullAway] dereferenced expression suite.getContext() is @Nullable
        Assert.assertArrayEquals("Arrays have different value", (Double[]) suite.getContext().get("list1"), (Double[]) suite.getContext().get("list2"));
                                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:37: error: [NullAway] unboxing of a @Nullable value
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:37: error: [NullAway] passing @Nullable parameter '(Boolean) suite.getContext().get("trueCondition")' where @NonNull is required
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:37: error: [NullAway] dereferenced expression suite.getContext() is @Nullable
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:78: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.testname = null;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:88: error: [NullAway] dereferenced expression messsage is @Nullable
        if (!messsage.contains(":")) {
                     ^
    (see http://t.uber.com/nullaway )
14 errors
